src/test/run-pass/port.rs
// -*- C -*-

prog a
{
  init(int x) {
  }
  main {
    let port[int] p;
    let int y;
    y <- p;
  }
}
