src/test/compile-fail/infinite-vec-type-recursion.rs
// -*- C -*-

prog a
{
  type x = vec[x];

  main {
    let x b = vec();
  }
}
